# datc_user_interface

./: .gitignore  CMakeLists.txt  LICENSE  README.md  datc_comm_interface.cpp  datc_comm_interface.hpp  datc_ctrl.cpp  datc_ctrl.hpp  gripper_window.ui  main_window.cpp  main_window.hpp  modbus_comm.hpp
include/: datc_comm_interface.hpp  datc_ctrl.hpp  main_window.hpp  modbus_comm.hpp
include/socket/: concurrent_queue.hpp  message_manager.hpp  tcp_manager.hpp
socket/: message_manager.hpp  tcp_manager.cpp  tcp_manager.hpp
src/: datc_comm_interface.cpp  datc_ctrl.cpp  main_window.cpp
src/socket/: tcp_manager.cpp
ui/: advanced_control.ui  datc_control_form.ui  gripper_window.ui  main_window.ui  modbus_form.ui  tcp_form.ui
